Banner Component completed

--- a/force-app/main/default/lwc/banner/banner.html
+++ b/force-app/main/default/lwc/banner/banner.html
@@ -1,9 +1,27 @@
 <template>
     <div class="banner">
-        <img src="userPic" class="portfolioImage">
+        <img src={userPic} class="portfolioImage">
         <div class="name">Abhishek Kumar</div>
         <div class="designation">Lead Software Engineer at Persistent System</div>
         <div class="location">Nagpur Maharastra</div>
+
+        <div>
+            <a href={linkedinUrl} target="_blank">
+                <img src={linkedin} class="social-icon"/>
+            </a>
+            <a href={twitterUrl} target="_blank">
+                <img src={twitter} class="social-icon"/>
+            </a>
+            <a href={githubUrl} target="_blank">
+                <img src={github} class="social-icon"/>
+            </a>
+            <a href={trailheadUrl} target="_blank">
+                <img src={trailhead} class="social-icon"/>
+            </a>
+            <a href={blogUrl} target="_blank">
+                <img src={blog} class="social-icon"/>
+            </a>
+        </div>
 
 
 
