Added portfolio to exp builder

--- a/force-app/main/default/lwc/userDetailsAndStatsWrapper/userDetailsAndStatsWrapper.html
+++ b/force-app/main/default/lwc/userDetailsAndStatsWrapper/userDetailsAndStatsWrapper.html
@@ -5,9 +5,10 @@
             <c-portfolio-user-details record-id={recordId} object-api-name={objectApiName}></c-portfolio-user-details>
             <!---<div>Portfolio user details will come here</div>-->
         </lightning-layout-item>
-        <lightning-layout-item size="12">
+
+       <!--- <lightning-layout-item size="12">
             <div>User stats will come here</div>
-        </lightning-layout-item>
+        </lightning-layout-item>-->
     </lightning-layout>
     </div>
 </template>
