--- a/force-app/main/default/lwc/workExperienceTab/workExperienceTab.html
+++ b/force-app/main/default/lwc/workExperienceTab/workExperienceTab.html
@@ -35,7 +35,7 @@
                     </p>
                     <article class="slds-box slds-timeline__item_details slds-theme_shade slds-m-top_x-small slds-m-horizontal_xx-small slds-p-around_medium" id="task-item-expanded-69" aria-hidden="false">
                     <div>
-                       {work.Description}
+                       <c-portfolio-string-to-html content={work.Description}></c-portfolio-string-to-html>
                     </div>
                     </article>
                 </div>
